--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url(`1.jpg);
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: red;
+}
+
+.button-sach {
+  text-align: center;
+  margin: 0 auto;
+  justify-content: center;
 }
