--- a/views/book_addnew.ejs
+++ b/views/book_addnew.ejs
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.ckeditor.com/4.17.2/standard/ckeditor.js"></script>
 
     <title>Document</title>
   </head>
@@ -15,44 +16,30 @@
     <div class="container">
       <form
         class="col-6 border border-dark rounded p-3 m-auto"
-        action="/loai/update/<%=sp.id  %>"
+        action="/book/store"
         method="POST"
       >
         <div class="form-group mb-3">
           <label for="name">Tên </label>
-          <input
-            class="form-control bg-info"
-            value="<%=sp.name  %> "
-            name="name"
-            id="name"
-          />
+          <input class="form-control bg-info" name="name" id="name" />
         </div>
         <div class="form-group mb-3">
           <label for="content">Nội dung</label>
-          <input
-            class="form-control bg-primary"
-            value="<%=sp.content  %>"
-            name="content"
-            id="content"
-          />
+          <input class="form-control bg-primary" name="content" id="content" />
         </div>
         <div class="form-group mb-3">
           <label for="image">Image</label>
           <input
+            type="file"
             class="form-control bg-primary"
-            value="<%=sp.image  %>"
             name="image"
             id="image"
           />
         </div>
+
         <div class="form-group mb-3">
           <label for="VND">VND</label>
-          <input
-            class="form-control bg-primary"
-            value="<%=sp.VND  %>"
-            name="VND"
-            id="VND"
-          />
+          <input class="form-control bg-primary" name="VND" id="VND" />
         </div>
         <div class="form-group mb-3">
           <label for="up_date">up date</label>
@@ -60,9 +47,8 @@
         </div>
         <div class="form-group mb-3">
           <label>Ẩn hiện</label>
-          <input type="radio" name="hidden" value="1" <%=(sp.hidden==1)?
-          "checked" :"" %> /> Hiện &nbsp; &nbsp; <input type="radio"
-          name="hidden" value="0" <%=(sp.hidden==0)? "checked" :"" %>/> Ẩn
+          <input type="radio" name="hidden" value="1" checked /> Hiện &nbsp;
+          &nbsp; <input type="radio" name="hidden" value="0" /> Ẩn
         </div>
         <div class="form-group mt-3">
           <button type="submit" class="btn btn-dark px-4 py-2 text-white">
