--- a/views/book_list.ejs
+++ b/views/book_list.ejs
@@ -18,7 +18,6 @@
     <div class="container col-8">
       <table class="table table-bordered">
         <tr>
-          <th>id</th>
           <th>Tên</th>
           <th>Noi dung</th>
           <th>image</th>
@@ -30,25 +29,25 @@
         </tr>
         <% for (let c of list ) { %>
         <tr>
-          <td><%= c.id %></td>
           <td><%= c.name %></td>
           <td><%= c.content %></td>
           <td><%= c.image %></td>
+          <!-- //hien thi a -->
           <td><%= c.VND %></td>
           <td><%= c.up_date %></td>
           <td><%= c.hidden==1 ? "Đang hiện" : "Đang ẩn"%></td>
           <th>
-            <button><a href="/loai/delete/<%=c.id%>">xóa</a></button>
+            <button><a href="/book/delete/<%=c.id%>">xóa</a></button>
           </th>
           <th>
-            <button><a href="/loai/edit/<%=c.id%>">sửa</a></button>
+            <button><a href="/book/edit/<%=c.id%>">sửa</a></button>
           </th>
         </tr>
 
         <% } %>
       </table>
       <th>
-        <button><a href="/loai/addnew">thêm mới</a></button>
+        <button><a href="/book/addnew">thêm mới</a></button>
       </th>
     </div>
   </body>
